Release: 3.1B2
Date: 2012
----------------------------------
Bug Fixes Since 3.1B1:

CAY-1689 CAY-1689 [PATCH] LOB*QueryBuilders do not check isQuotingSQLIdentifiers
CAY-1713 Inconsistent property name: "cayenne.rop.service.timeout"
CAY-1715 Passing parameters to mapped EJBQL queries
CAY-1721 Writing blobs fails (Oracle)
CAY-1725 NullPointerException from call to removeToManyTarget

----------------------------------
Release: 3.1B1
Date: 10 June 2012
----------------------------------
Changes/New Features Since 3.1M3:

CAY-1459 Modeler: DbEntities from other DataMaps under same domain are not displayed
CAY-1603 Improve custom ExtendedType registration API
CAY-1607 [PATCH] add pluralize method to StringUtils for use in templates
CAY-1608 Implement constructor injection support for DefaultAdhocObjectFactory
CAY-1616 Remove internal dependencies on deprecated ObjectContext.localObject
CAY-1618 Create database adapters instances with proper injection
CAY-1629 [PATCH] Can't add custom Hessian serializers to the client
CAY-1630 [PATCH] On OptimisticLockException, add method to return the object that caused the failure
CAY-1637 [PATCH] DataContextFactory is cumbersome to customize
CAY-1638 [PATCH] Can't disable validation for CayenneContext
CAY-1639 cayenne-lifecycle: don't call String representation of ObjectId a UUID
CAY-1640 NullPointerException when saving
CAY-1642 [PATCH] add ability to customize connection "timeout" setting for ROP
CAY-1643 Updated Velocity templates to use static keys in setters/getters
CAY-1649 Use BOOLEAN data type on Derby. Require Derby version >= 10.7.1.1.
CAY-1650 [PATCH] Verify existence of tables if a default schema is specified
CAY-1651 ObjectContext.localObject - defer FaultFailureExceptions on temporary IDs
CAY-1653 Improving DefaultEventManager concurrency - non-bocking DispatchQueue
CAY-1654 Can't switch DataSource Factory on certain projects
CAY-1656 cayenne generate extra data in xml model when change DataNode factory